@@ -1,3 +1,7 @@
+lldpd (1.0.6)
+  * Fix:
+    + Do not loose chassis local information when interface status changes.
+
 lldpd (1.0.5)
   * Changes:
     + Interface names are also matched for management addresses.
